Add some design description and adjust the file path.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -21,7 +21,7 @@
 
         <!-- :float view -->
         <service
-                android:name=".view.FloatService"
+                android:name=".FloatService"
                 android:exported="false">
         </service>
     </application>
