--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,7 +8,7 @@
             android:icon="@drawable/icon"
             android:label="@string/app_name">
         <activity
-                android:name=".FloatViewTestActivity"
+                android:name=".FloatViewActivity"
                 android:configChanges="keyboardHidden|orientation|screenSize"
                 android:label="@string/app_name"
                 android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
