--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,12 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="rodrigo.floatview">
+          package="rodrigo.floatview"
+          android:versionCode="1"
+          android:versionName="floating view demo">
 
-    <uses-sdk android:minSdkVersion="13"
+    <uses-sdk
+            android:minSdkVersion="13"
             android:targetSdkVersion="19"/>
+
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+    <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS_FULL"/>
+
     <application
             android:icon="@drawable/icon"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:allowBackup="false">
+
         <activity
                 android:name=".FloatViewActivity"
                 android:configChanges="keyboardHidden|orientation|screenSize"
@@ -19,13 +28,10 @@
             </intent-filter>
         </activity>
 
-        <!-- :float view -->
         <service
                 android:name=".FloatService"
                 android:exported="false">
         </service>
     </application>
 
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
-    <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS_FULL"/>
 </manifest>
